adding a get all bus stop based on latlng
